# Glance

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
docs/: cli.md  daemon.md  extensions.md  security.md
extensions/vscode/: .vscodeignore  LICENSE  package-lock.json  package.json
extensions/vscode/media/: panel.css  panel.js
extensions/vscode/src/: daemon.ts  extension.ts  panel.ts
extensions/zed/: Cargo.toml  extension.toml  extension.wasm
extensions/zed/src/: lib.rs
src/: lib.rs  main.rs  security.rs
src/cli/: count.rs  info.rs  mod.rs  output.rs  read.rs  search.rs  validate.rs
src/index/: cache.rs  line_index.rs
src/protocol/: request.rs  response.rs
src/reader/: csv.rs  format.rs  mod.rs  pretty.rs  search.rs  stream.rs
src/server/: rpc.rs
tests/: cache_edge_cases_test.rs  cache_test.rs  cli_test.rs  csv_test.rs  daemon_dedup_blackbox_test.rs  format_detection_test.rs  line_index_test.rs  multi_handle_test.rs  reader_edge_cases_test.rs  reader_test.rs  search_edge_cases_test.rs  security_test.rs
