[package]
name = "glance"
version = "0.3.3"
edition = "2021"

[[bin]]
name = "glance"
path = "src/main.rs"

[lib]
name = "glance"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "1"
regex = "1"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
